fetch operation works when user clicks search button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <form>
         <h2>Search for a city:</h2>
         <input id="cityInput" type="text" placeholder="Search...">
-        <button type="submit" class="search-button">Search</button>
+        <button class="search-button" type="submit">Search</button>
       </form>
       <h2 id="cityName"></h2>
     </div>
