Changed it from being the same day, different hour to be a different day for each weather card

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <input id="cityInput" type="text" placeholder="Search...">
         <button class="search-button" type="submit">Search</button>
       </form>
-      <h2 id="cityName"></h2>
+      <ul id="citySearches"></ul>
     </div>
     <div class="content">
       <!-- Your information content goes here -->
