Styling for weather cards and searches + commenting

--- a/index.html
+++ b/index.html
@@ -13,57 +13,26 @@
     </div>
   <div class="container">
     <div class="search-menu">
-      <!-- Your search form goes here -->
+      <!-- Search Bar-->
       <form>
         <h2>Search for a city:</h2>
         <input id="cityInput" type="text" placeholder="Search...">
         <button class="search-button" type="submit">Search</button>
+        <ul id="citySearches"></ul>
       </form>
-      <ul id="citySearches"></ul>
     </div>
+
     <div class="content">
-      <!-- Your information content goes here -->
       <div class="city-card">
-        <!--<h1>Atlanta</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>-->
+        <!--the main weather card with current date-->
       </div>
 
       <div class="day-forecast">
         <h2>5-Day Forecast:</h2>
         <div class="weather-cards">
-            <!--<li class="card">
-                <h2>London 9-14-2023</h2>
-                <h4>Temp</h4>
-                <h4>Wind</h4>
-                <h4>Humidity</h4>
-            </li>
-            <li class="card">
-                <h2>London 9-14-2023</h2>
-                <h4>Temp</h4>
-                <h4>Wind</h4>
-                <h4>Humidity</h4>
-            </li>
-            <li class="card">
-                <h2>London 9-14-2023</h2>
-                <h4>Temp</h4>
-                <h4>Wind</h4>
-                <h4>Humidity</h4>
-            </li>
-            <li class="card">
-                <h2>London 9-14-2023</h2>
-                <h4>Temp</h4>
-                <h4>Wind</h4>
-                <h4>Humidity</h4>
-            </li>
-            <li class="card">
-                <h2>London 9-14-2023</h2>
-                <h4>Temp</h4>
-                <h4>Wind</h4>
-                <h4>Humidity</h4>
-            </li>-->
+            <!-- Weather cards with future dates -->
           </div>
       </div>
-      
     </div>
   </div>
 
